# TinyGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: 01.draw.c  CMakeLists.txt  index.html
include/TinyGL/: TinyGL.h  base.h  color.h  key.h  log.h  renderer.h  vector.h  window.h
src/: CMakeLists.txt  base.c  buffer.c  default_2d.c  event.c  loop.c  renderer.c  shader.c  vertex_array.c  window.c
src/include/TinyGL/: TinyGL.h  base.h  buffer.h  button.h  color.h  event.h  graphics.h  key.h  log.h  loop.h  renderer.h  shader.h  vertex_array.h  window.h
src/shader/: CMakeLists.txt  default_2d_fragment_shader.c  default_2d_fragment_shader.glsl  default_2d_texture_fragment_shader.c  default_2d_texture_fragment_shader.glsl  default_2d_texture_vertex_shader.c  default_2d_texture_vertex_shader.glsl  default_2d_vertex_shader.c  default_2d_vertex_shader.glsl
