add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/shader")

aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}" TINYGL_SRC)
add_library(${PROJECT_NAME} ${TINYGL_SRC})
target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(${PROJECT_NAME} PUBLIC glfw glad)

file(GLOB TINYGL_HDR "${CMAKE_CURRENT_SOURCE_DIR}/src/include/TinyGL/*.h")
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${TINYGL_HDR}")

if (TINYGL_USE_DEFAULT)
    target_compile_definitions(${PROJECT_NAME} PUBLIC -DTINYGL_USE_DEFAULT)
endif (TINYGL_USE_DEFAULT)

install(TARGETS ${PROJECT_NAME}
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include/TinyGL)